# scrut

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
playbooks/: lateral-movement.yaml  persistence-hunt.yaml  ransomware-triage.yaml
src/scrut/: __init__.py
src/scrut/cli/: __init__.py  bundle.py  cache.py  case.py  collect.py  main.py  output.py  parse.py  playbook.py  target.py
src/scrut/collectors/: __init__.py  scope.py  windows.py
src/scrut/core/: __init__.py  cache.py  case.py  errors.py  history.py  logging.py  metrics.py  pagination.py  target.py
src/scrut/evidence/: __init__.py  bundle.py  ref.py  signing.py
src/scrut/images/: __init__.py  base.py  ewf.py  raw.py
src/scrut/images/filesystem/: __init__.py  base.py  fat.py  ntfs.py
src/scrut/models/: __init__.py  bundle.py  case.py  error.py  metrics.py  playbook.py  record.py
src/scrut/normalizer/: __init__.py  entity.py  ioc.py  timeline.py
src/scrut/parsers/: __init__.py  activitiescache.py  amcache.py  bam.py  base.py  bits.py  browser.py  defender.py  etl.py  evtx.py  firewall.py  jumplists.py  lnk.py  mft.py  muicache.py  networkconfig.py  notifications.py  powershell.py  prefetch.py  rdpcache.py  recentapps.py  recyclebin.py  registry.py  scheduledtasks.py  searchhistory.py  services.py  shellbags.py  shimcache.py  srum.py  syscache.py  thumbcache.py  typedurls.py  usnjrnl.py  wer.py  wmi.py
src/scrut/playbook/: __init__.py  executor.py  loader.py  state.py
src/scrut/plugins/: __init__.py  interface.py  loader.py  manifest.py  runner.py
src/scrut/schemas/: bundle.schema.json  case.schema.json  error.schema.json  metrics.schema.json  record.schema.json  target.schema.json
tests/unit/: test_collector.py
