[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrut"
version = "0.1.0"
description = "Evidence-first, MCP/LLM-native DFIR CLI orchestrator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Scrut Team" }
]
keywords = ["dfir", "forensics", "cli", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-golden>=0.2.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
signing = [
    "cryptography>=42.0.0",
]
dissect = [
    "dissect>=3.0",
]
all = [
    "scrut[signing,dissect]",
]
dist = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
scrut = "scrut.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/scrut"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["scrut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["src/scrut"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# PyInstaller configuration for distribution
[tool.pyinstaller]
name = "scrut"
onefile = true
console = true
icon = "assets/scrut.ico"
add-data = [
    "playbooks:playbooks",
    "src/scrut/schemas:schemas",
]
hidden-import = [
    "scrut.parsers",
    "scrut.collectors",
    "scrut.normalizer",
    "scrut.plugins",
]
